--- a/b.css
+++ b/b.css
@@ -1,5 +1,17 @@
-#xxx{
-  background: green;
+ul,ol{
+  list-style: none;
+}
+*{
+  margin: 0;
+  padding: 0;
+}
+.icon {
+  width: 1em; height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
+#xxx{  
   display: block;
 }
 
@@ -7,21 +19,52 @@ body{
   margin: 0px;
 }
 
-html{
-}
-
 .actions{
   position: fixed;
-  bottom: 0;
-  left: 0;
+  top: 0px;
+  left: 0px;
+  padding: 20px;
 }
-.actions > #brush{
-  display: none;
+.actions  svg{
+  width: 1.6em;
+  height: 1.6em;
+  transition: all 0.3s ;
+  margin: 0 10px;
 }
-
-.actions.x > #brush{
-  display: inline-block;
+.actions  svg.active{
+  fill: red;
+  transform: scale(1.2);  
 }
-.actions.x > #eraser{
-  display: none
+.actions .pencolor{
+  position: fixed;
+  top: 70px;
+  left: 10px;
+  
+}
+.actions .pencolor > li{
+  width: 20px;
+  height: 20px;
+  box-shadow: 0 0  3px rgba(0,0,0,0.25);
+  border-radius: 50%;
+  margin: 10px 0 ;
+  transition: all 0.3s
+}
+.actions .pencolor > li.black{
+  background: black;
+}
+.actions .pencolor > li.red{
+  background: red;
+}
+.actions .pencolor > li.yellow{
+  background: yellow;
+}
+.actions .pencolor > li.green{
+  background: green;
+}
+.actions .pencolor > li.blue{
+  background: blue;
+}
+.actions .pencolor > li.active{
+  box-shadow: 0 0  3px rgba(0,0,0,0.95);
+  transform: scale(1.2);
 }
