--- a/b.css
+++ b/b.css
@@ -96,9 +96,14 @@ body{
   color: red;
 }
 #clear{
+  -moz-transition: all 0.5s linear;
+    -webkit-transition: all 0.5s linear;
+    transition: all 0.5s linear;
   
-   transition: all 0.5s ;
 }
-#clear.click{
-transform: rotate(360deg);
+#clear.active{
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
 }
